# UEDHH

./: README.md  pyproject.toml
uedhhlib/: __init__.py  data_picker.py  dataset.py  utils.py
uedhhlib/analysis/: __init__.py  azimuth_integr.py  find_colors.py  q2_weights.py
uedhhlib/datasets/: __init__.py  base.py  pumped.py  static.py  unpumped.py
uedhhlib/io/: writers.py
uedhhlib/processing/: background.py  hotpixels.py
uedhhlib/tools/: __init__.py  copy_files.py  datapicker.py  preprocessing.py  test_playground.py  wavelength_energy.py
uedhhlib/userscripts/: Azimuthal_integration.py  azigral.py  copy_all_txt.py  debug.py  electr_wavelength.py  hprmv_allImgs.py  loadH5_first.py  loadH5_regular.py  load_h5.py  unpumped_analysis.py  use_datapicker.py
