[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uedhhlib"
version = "0.1.0"
description = "Ultrafast Electron Diffraction analysis library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "pillow",
    "tqdm",
    "h5py",
    "scipy",
    "lmfit",
]

[tool.setuptools.packages.find]
where = ["."]